2009-05-05  Ben Murdoch  <benm@google.com>

        Reviewed by Eric Seidel.
        
        Add #if ENABLE(DATABASE) guards around database code so toggling ENABLE_DATABASE off does not break builds.
        https://bugs.webkit.org/show_bug.cgi?id=24776

        * Api/qwebdatabase.cpp:
        * Api/qwebdatabase.h:
        * Api/qwebdatabase_p.h:
        * Api/qwebsecurityorigin.cpp:
        (QWebSecurityOrigin::databaseUsage):
        (QWebSecurityOrigin::databaseQuota):
        (QWebSecurityOrigin::setDatabaseQuota):
        * Api/qwebsecurityorigin.h:
        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::exceededDatabaseQuota):
        * WebCoreSupport/ChromeClientQt.h:

2009-05-05  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbø.

        Various improvements to the class documentation, including a simple snippet for QWebElement.

        * Api/qwebelement.cpp:
        * Api/qwebframe.cpp:
        * docs/webkitsnippets/webelement/main.cpp: Added.
        * docs/webkitsnippets/webelement/webelement.pro: Added.

2009-05-05  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Ariya Hidayat.

        Simplify variant conversion by moving the null check into
        convertValueToQVariant.

        * Api/qwebframe.cpp:
        (QWebFrame::evaluateJavaScript): Moved null check into conversion function.
        * tests/qwebframe/tst_qwebframe.cpp:
        Added test to verify the correct conversion of null values to QVariant.

2009-05-01  Geoffrey Garen  <ggaren@apple.com>

        Rubber Stamped by Sam Weinig.
        
        Renamed JSValuePtr => JSValue.

        * Api/qwebelement.cpp:
        (setupScriptContext):
        (setupScriptObject):
        (QWebElement::evaluateScript):
        (QWebElement::functions):
        (QWebElement::scriptableProperty):
        (QWebElement::setScriptableProperty):
        (QWebElement::scriptableProperties):
