@@ -19,8 +19,6 @@
 #ifndef _WEBDATABASE_H_
 #define _WEBDATABASE_H_
 
-#if ENABLE(DATABASE)
-
 #include <QtCore/qstring.h>
 #include <QtCore/qshareddata.h>
 
@@ -56,8 +54,6 @@ private:
 private:
     QExplicitlySharedDataPointer<QWebDatabasePrivate> d;
 };
-
-#endif
 
 #endif
 
