@@ -45,12 +45,10 @@ public:
     QString host() const;
     int port() const;
 
-#if ENABLE(DATABASE)
     qint64 databaseUsage() const;
     qint64 databaseQuota() const;
 
     void setDatabaseQuota(qint64 quota);
-#endif
 
     QList<QWebDatabase> databases() const;
 
